--- a/website/index.html
+++ b/website/index.html
@@ -1,83 +1,77 @@
-<html> 
+<html>
+
 <head>
-<title>Tree Huggers</title>
-<!--
+    <title>Tree Huggers</title>
+    <!--
   <link rel="stylesheet" href="/static/css/bootstrap.css">
   <link rel="stylesheet" href="/static/css/custom.css">
   <link rel="stylesheet" href="/static/css/bootstrap-responsive.css">
   <link rel="stylesheet/less" href="/static/css/main.less">
 -->
-  <!-- Rather use `less.js` to dynamically compile your `stylesheet/less` files? -->
- 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <!-- Rather use `less.js` to dynamically compile your `stylesheet/less` files? -->
 
- <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="./static/css/custom.css"></link>
+    <script src="./static/js/custom.js"></script>
 
-<!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
-<!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css"> -->
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+    <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
- </head>
-<body> 
-	<div class="container">
-<nav class="navbar nav-default" role="navigation">
- <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">Brand</a>
-  </div>
+    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css"> -->
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-          <li class="divider"></li>
-          <li><a href="#">One more separated link</a></li>
-        </ul>
-      </li>
-    </ul>
-    <form class="navbar-form navbar-left" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Link</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div><!-- /.navbar-collapse -->
-</nav>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+    <div class="container">
+    	<div id="nav" data-spy="affix" data-offset-top="0">
+        <nav class="navbar nav-default" role="navigation">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Overview</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="#mechanical">Mechanical</a>
+                    </li>
+                    <li><a href="#eletrical">Electrical</a>
+                    </li>
+                    <li><a href="#software">Software</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </nav>
+    </div>
+        <div class="jumbotron">
+            <h1>Tree Huggers</h1>
+            <div class="thumbnail">
+                <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/2013-12-16%2003.24.33.jpg" class="img-rounded" />
+            </div>
+            <p>This is our website!</p>
+        </div>
+        <section id="mechanical">
+            <div class="page-header">
+                <h2>The Mechanical System</h2>
+            </div>
+        </section>
+        <section id="eletrical">
+            <div class="page-header">
+                <h2>The Electrical System</h2>
+            </div>
+        </section>
+        <section id="software">
+            <div class="page-header">
+                <h2>The Software System</h2>
+            </div>
+        </section>
+    </div>
 
 
-	<div class="jumbotron">
-	<h1> Tree Huggers </h1>
-	<p> This is our website! </p>
-	 </div>
-</div>
+    </div>
 </body>
+
 </html>
