navbar is nice, need to add scrollto and lazy image loading

--- a/website/index.html
+++ b/website/index.html
@@ -1,7 +1,7 @@
 <html>
-
+ 
 <head>
-    <title>Tree Huggers</title>
+    <title>The Electricitree</title>
     <!--
   <link rel="stylesheet" href="/static/css/bootstrap.css">
   <link rel="stylesheet" href="/static/css/custom.css">
@@ -26,47 +26,74 @@
 
 <body>
     <div class="container">
-    	<div id="nav" data-spy="affix" data-offset-top="0">
-        <nav class="navbar nav-default" role="navigation">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Overview</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="#mechanical">Mechanical</a>
-                    </li>
-                    <li><a href="#eletrical">Electrical</a>
-                    </li>
-                    <li><a href="#software">Software</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </nav>
-    </div>
-        <div class="jumbotron">
-            <h1>Tree Huggers</h1>
-            <div class="thumbnail">
-                <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/2013-12-16%2003.24.33.jpg" class="img-rounded" />
-            </div>
-            <p>This is our website!</p>
+        <div id="nav" data-spy="affix" data-offset-top="0">
+            <nav class="navbar nav-default" role="navigation">
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="bigger"><a href="#overview">Overview</a>
+                        </li>
+                        <li><a href="#mechanical">Mechanical</a>
+                        </li>
+                        <li><a href="#eletrical">Electrical</a>
+                        </li>
+                        <li><a href="#software">Software</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </nav>
         </div>
+        <section id="overview">
+            <div class="jumbotron">
+                <h1>The Electricitree</h1>
+                <div class="thumbnail">
+                    <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/2013-12-16%2003.24.33.jpg" class="img-rounded" />
+                </div>
+                <p>This is our website!</p>
+            </div>
+        </section>
         <section id="mechanical">
             <div class="page-header">
                 <h2>The Mechanical System</h2>
             </div>
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
         </section>
         <section id="eletrical">
             <div class="page-header">
                 <h2>The Electrical System</h2>
             </div>
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
         </section>
         <section id="software">
             <div class="page-header">
                 <h2>The Software System</h2>
             </div>
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
+                <br /><br /><br /><br /><br /><br />
         </section>
     </div>
 
