added lazy image loading, team section, and lorem ipsum text

--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,5 @@
 <html>
- 
+
 <head>
     <title>The Electricitree</title>
     <!--
@@ -13,6 +13,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./static/css/custom.css"></link>
     <script src="./static/js/custom.js"></script>
+    <script src="./static/js/lazy.min.js"></script>
 
     <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 
@@ -39,63 +40,78 @@
                         </li>
                         <li><a href="#software">Software</a>
                         </li>
+                        <li><a href="#team">The Team</a>
+                        </li>
                     </ul>
                 </div>
-                <!-- /.navbar-collapse -->
+            </div>
             </nav>
-        </div>
-        <section id="overview">
-            <div class="jumbotron">
-                <h1>The Electricitree</h1>
-                <div class="thumbnail">
-                    <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/2013-12-16%2003.24.33.jpg" class="img-rounded" />
+            <section id="overview">
+                <div class="jumbotron">
+                    <h1>The Electricitree</h1>
+                    <div class="thumbnail">
+                        <img data-original="https://dl.dropboxusercontent.com/u/11830885/elecanisms/2013-12-16%2003.24.33.jpg" class="hero lazy" />
+                    </div>
+                    <p>This is our website!</p>
                 </div>
-                <p>This is our website!</p>
-            </div>
-        </section>
-        <section id="mechanical">
-            <div class="page-header">
-                <h2>The Mechanical System</h2>
-            </div>
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-        </section>
-        <section id="eletrical">
-            <div class="page-header">
-                <h2>The Electrical System</h2>
-            </div>
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-        </section>
-        <section id="software">
-            <div class="page-header">
-                <h2>The Software System</h2>
-            </div>
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-                <br /><br /><br /><br /><br /><br />
-        </section>
-    </div>
+            </section>
+            <section id="mechanical">
+                <div class="page-header">
+                    <h2>The Mechanical System</h2>
+                </div>
+                <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
+                <ul>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                </ul>
+                <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
+            </section>
+            <section id="eletrical">
+                <div class="page-header">
+                    <h2>The Electrical System</h2>
+                </div>
+                <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
+                <ul>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                </ul>
+                <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
+            </section>
+            <section id="software">
+                <div class="page-header">
+                    <h2>The Software System</h2>
+                </div>
+                <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
+                <ul>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                </ul>
+                <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
+            </section>
+            <section id="team">
+                <div class="page-header">
+                    <h2>The Team</h2>
+                </div>
+                <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
+                <ul>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item</li>
+                </ul>
+                <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
+            </section>
+        </div>
 
 
     </div>
