fixed hero unit, started adding intro content, googled otters

--- a/website/index.html
+++ b/website/index.html
@@ -1,14 +1,7 @@
 <html>
 
 <head>
-    <title>The Electricitree</title>
-    <!--
-  <link rel="stylesheet" href="/static/css/bootstrap.css">
-  <link rel="stylesheet" href="/static/css/custom.css">
-  <link rel="stylesheet" href="/static/css/bootstrap-responsive.css">
-  <link rel="stylesheet/less" href="/static/css/main.less">
--->
-    <!-- Rather use `less.js` to dynamically compile your `stylesheet/less` files? -->
+    <title>The ElectriciTree</title>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./static/css/custom.css"></link>
@@ -34,6 +27,8 @@
                     <ul class="nav navbar-nav">
                         <li class="bigger"><a href="#overview">Overview</a>
                         </li>
+                        <li><a href="#intro">Intro</a>
+                        </li>
                         <li><a href="#mechanical">Mechanical</a>
                         </li>
                         <li><a href="#eletrical">Electrical</a>
@@ -44,74 +39,92 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            </nav>
-            <section id="overview">
-                <div class="jumbotron">
-                    <h1>The Electricitree</h1>
-                    <div class="thumbnail">
-                        <img data-original="https://dl.dropboxusercontent.com/u/11830885/elecanisms/2013-12-16%2003.24.33.jpg" class="hero lazy" />
-                    </div>
-                    <p>This is our website!</p>
-                </div>
-            </section>
-            <section id="mechanical">
-                <div class="page-header">
-                    <h2>The Mechanical System</h2>
-                </div>
-                <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
-                <ul>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                </ul>
-                <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
-            </section>
-            <section id="eletrical">
-                <div class="page-header">
-                    <h2>The Electrical System</h2>
-                </div>
-                <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
-                <ul>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                </ul>
-                <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
-            </section>
-            <section id="software">
-                <div class="page-header">
-                    <h2>The Software System</h2>
-                </div>
-                <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
-                <ul>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                </ul>
-                <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
-            </section>
-            <section id="team">
-                <div class="page-header">
-                    <h2>The Team</h2>
-                </div>
-                <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
-                <ul>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                </ul>
-                <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
-            </section>
         </div>
+        </nav>
+        <section id="overview">
+            <div class="jumbotron">
+                <h1>The ElectriciTree</h1>
+                <p id="abstract">
+                    <img data-original="https://dl.dropboxusercontent.com/u/11830885/elecanisms/2013-12-16%2003.24.33.jpg" class="hero lazy" />For our Elecanisms Final Project, we created the ElectriciTree, a kinetic sculpture of a living tree on a $250 budget in 5 weeks. The ElectriciTree features Buckyballs driven along tracks that function as tree branches, expanding and contracting. Five irises also open and close with the branches to reveal light.</p>
+            </div>
+        </section>
+        <section id="intro">
+            <div class="page-header">
+                <h2>Introduction</h2>
+                <h4>Goals</h4>
+                <ul>
+                    <li>The final product should be mechanically beautiful</li>
+                    <li>It should be self-contained and robust, so that it could be a permanent installation</li>
+                    <li>The electrical system should included a printed circuit board</li>
+                </ul>
+                <h4>Inspiration</h4>
+                <h4>Results</h4>
+                <h4>The Future</h4>
+                <p>
+                    The goal of this project was to have an elegant piece of mechatronic artwork that could be displayed for Olin’s many visitors. We believe that this project resulted in a large step in the right direction, but some areas could use more work. [TODO] what areas?
+                </p>
+                <p>
+                    Next semester, we plan on applying for a student academic grant at Olin to fund our future endeavors with the ElectriciTree
+                </p>
+            </div>
+        </section>
+        <section id="mechanical">
+            <div class="page-header">
+                <h2>The Mechanical System</h2>
+            </div>
+            <p>The mechanical system contains two main subsystems: an extending and contracting branch system and an opening and closing mechanical aperture system. The goal of the mechanical system was to have these two systems work in conjunction to provide a visualization of growth and decay of a tree. </p>
+            <ul>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+            </ul>
+            <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
+        </section>
+        <section id="eletrical">
+            <div class="page-header">
+                <h2>The Electrical System</h2>
+            </div>
+            <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
+            <ul>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+            </ul>
+            <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
+        </section>
+        <section id="software">
+            <div class="page-header">
+                <h2>The Software System</h2>
+            </div>
+            <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
+            <ul>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+            </ul>
+            <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
+        </section>
+        <section id="team">
+            <div class="page-header">
+                <h2>The Team</h2>
+            </div>
+            <p>Lorem ipsum Minim consectetur do ad labore labore ea ullamco nisi sunt ex Excepteur dolor consectetur incididunt ut cillum aliqua elit dolore Ut consectetur minim pariatur Ut Ut consequat pariatur exercitation ea ullamco nisi in non laboris enim non eiusmod Duis cupidatat irure deserunt occaecat deserunt cupidatat sint in proident aliqua occaecat quis cupidatat cupidatat nulla anim incididunt sit elit qui non quis magna Ut culpa mollit ut consequat incididunt proident in anim dolor culpa consequat ad dolor veniam reprehenderit aliquip reprehenderit labore sed commodo irure cillum exercitation in proident Ut do cillum occaecat enim dolore reprehenderit quis quis consequat enim anim dolor deserunt sit magna enim culpa exercitation est eu reprehenderit ad commodo Excepteur magna proident ut mollit incididunt exercitation eu eiusmod cupidatat dolore eiusmod pariatur dolor eu dolor dolor nulla tempor sint eiusmod deserunt sunt in in laboris elit voluptate non ex occaecat est magna nisi eu aliqua cillum dolor ullamco culpa aliquip nulla et exercitation adipisicing Excepteur deserunt eu irure laboris fugiat elit in laborum sunt ut adipisicing ea dolore enim deserunt laboris et velit dolore id occaecat ea occaecat sint nisi in occaecat laborum dolore exercitation tempor cillum eiusmod exercitation ullamco adipisicing dolor cupidatat ut amet enim cupidatat quis ad elit veniam cillum ad do magna consectetur nostrud Duis dolore commodo eiusmod reprehenderit quis cupidatat elit id nisi ex nostrud minim tempor et cupidatat voluptate in.</p>
+            <ul>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+            </ul>
+            <p>Lorem ipsum Commodo voluptate ut nisi deserunt Ut dolor anim velit consequat dolor nulla consequat Excepteur ex sit ullamco sint do dolore ad ex ut dolor dolore sint fugiat.</p>
+        </section>
+    </div>
 
 
     </div>
